# WiserNode

./: LICENSE  README.md  go.mod  go.sum
cmd/server/: main.go
cpp/: CMakeLists.txt
cpp/include/: video_platform_client.h
cpp/src/: app.cpp  client.cpp  example.cpp
internal/api/http/: server.go
internal/models/: models.go
internal/protocols/gb28181/: protocol.go
internal/protocols/onvif/: protocol.go
internal/protocols/rtsp/: protocol.go
internal/services/device/: impl.go  service.go
internal/services/session/: impl.go  service.go
internal/services/stream/: impl.go  service.go
proto/: video_platform.proto
test/: device_test.go  session_test.go  stream_test.go
web/: index.html
